// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubRepoCard.vue renders main props when passed 1`] = `
<div class="mx-auto v-card v-sheet v-sheet--outlined theme--light" style="max-width: 600px;">
  <div tabindex="-1" class="v-list-item v-list-item--three-line theme--light">
    <div class="v-list-item__content">
      <div class="v-list-item__title headline mb-1">
        Test repo name
      </div>
      <div class="mb-8">
        by
        <a id="owner-link" target="_blank">
          Hehehe
        </a></div>
      <div class="v-list-item__subtitle"><span class="v-tooltip v-tooltip--bottom"><!----><i aria-hidden="true" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate material-icons theme--light">star</i></span> <span id="stars">
          10
        </span></div>
      <div class="mt-2 mb-2">
        <div class="v-list-item__subtitle"><span class="v-tooltip v-tooltip--bottom"><!----><i aria-hidden="true" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate material-icons theme--light">info</i></span> <span id="open-issues">
            20
          </span></div>
      </div>
    </div>
    <div class="v-avatar v-list-item__avatar rounded rounded-0 v-avatar--tile grey" style="height: 80px; min-width: 80px; width: 80px;">
      <!----> <i aria-hidden="true" class="v-icon notranslate mdi mdi-account-circle theme--dark" style="font-size: 70px;"></i></div>
  </div>
  <div class="v-card__actions"><button target="_blank" type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default blue--text" id="repo-link"><span class="v-btn__content">
      OPEN
      <i aria-hidden="true" class="v-icon notranslate pa-2 material-icons theme--light" style="font-size: 16px;">open_in_new</i></span></button></div>
</div>
`;

exports[`GithubRepoCard.vue should render owner and repo links 1`] = `
<div class="mx-auto v-card v-sheet v-sheet--outlined theme--light" style="max-width: 600px;">
  <div tabindex="-1" class="v-list-item v-list-item--three-line theme--light">
    <div class="v-list-item__content">
      <div class="v-list-item__title headline mb-1">
        Nice repo
      </div>
      <div class="mb-8">
        by
        <a href="https://example.com/nice-owner-url" id="owner-link" target="_blank">
          Haha
        </a></div>
      <div class="v-list-item__subtitle"><span class="v-tooltip v-tooltip--bottom"><!----><i aria-hidden="true" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate material-icons theme--light">star</i></span> <span id="stars">

        </span></div>
      <div class="mt-2 mb-2">
        <div class="v-list-item__subtitle"><span class="v-tooltip v-tooltip--bottom"><!----><i aria-hidden="true" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate material-icons theme--light">info</i></span> <span id="open-issues">

          </span></div>
      </div>
    </div>
    <div class="v-avatar v-list-item__avatar rounded rounded-0 v-avatar--tile grey" style="height: 80px; min-width: 80px; width: 80px;">
      <!----> <i aria-hidden="true" class="v-icon notranslate mdi mdi-account-circle theme--dark" style="font-size: 70px;"></i></div>
  </div>
  <div class="v-card__actions"><a href="https://example.com/nice-repo" target="_blank" class="v-btn v-btn--flat v-btn--text theme--light v-size--default blue--text" id="repo-link"><span class="v-btn__content">
      OPEN
      <i aria-hidden="true" class="v-icon notranslate pa-2 material-icons theme--light" style="font-size: 16px;">open_in_new</i></span></a></div>
</div>
`;
